PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite 7.0.0-Ringsaker
6 March 2017

pts-core: Make the AppStream meta data happy
pts-core: Improve formatting of PDF generation on large result files
phodevi: Expand GCC version detection when -dumpversion isn't supported (e.g. gcc-snapshot of gcc 7.0.1)

Phoronix Test Suite 7.0.0 Milestone 5
28 February 2017

pts-core: Allow bzip2 compression of result file uploads to OpenBenchmarking.org
pts-core: Only preserve the original raw result string if it differs from the final result
pts-core: Show results in text mode when show-result sub-command is run without DISPLAY
report_test_run_times: new module to report test run times as result graphs

Phoronix Test Suite 7.0.0 Milestone 4
16 February 2017

pts-core: stress-run styling improvements
pts-core: External dependency XML updates
phodevi: Continued tweaking on the new system information view
phodevi: Append LLVM version to OpenGL driver string where relevant
pts_Graph: Continued tweaking of graph UI
pts_Graph: Allow more compact multi-way comparison graphs
pts_Graph: Various SVG size/efficiency optimizations

Phoronix Test Suite 7.0.0 Milestone 3
7 February 2017

pts-core: Add winners-and-losers sub-command for providing some first/last place finish stats
pts-core: Don't pass files greater than ~50MB to the result parser as likely too big to parse and invalid data like lots of warnings/errors from test
pts-core: Restructured test result parser
pts-core: Dropping of some deprecated checks
pts-core: Add ArgumentsDescription to the results-parser schema for appending a string to the used arguments description string on test execution
pts-core: Add the result-scale to the test profile comparison_hash (NOTE: any external data stores making use of the comparison_hash should thus rebuild their hash indexes)
pts-core: Allow one test run to generate multiple result outputs (graphs, etc) from multiple result-definition entries