@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+phodevi: Improved detection for Quill AArch64 board and possibly other boards
+
 Phoronix Test Suite 7.0.0-Ringsaker
 6 March 2017
 
